fixed image spacing

--- a/styles/grids.css
+++ b/styles/grids.css
@@ -1,61 +1,50 @@
 /******************** HOME PAGE START ********************/
 .home-page-wrapper {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 87px 550px auto 800px 100px;
-    grid-template-areas: 
-    "navbar" 
-    "homebanner" 
-    "homedescription" 
-    "homesubdescriptions" 
-    "footer";
+	display: grid;
+	grid-template-columns: auto;
+	grid-template-rows: 100px 550px auto auto 100px;
+	grid-template-areas: 
+	"navbar"
+	"homebanner"
+	"homedescription"
+	"homesubdescriptions"
+	"footer";
 }
 
 nav {
-    grid-area: navbar;
-    background: #0d1c38;
-}
-
-.nav-bar-main-menu .dropdown:nth-child(5) .dropdown-contentx {
-    display: grid;
-    grid-template-columns: auto auto;
-}
-
-.nav-first-col {
-    grid-column-start: 1;
-    display: inline-grid;
-}
-
-.nav-second-col {
-    grid-column: 2;
-    display: inline-grid;
+	grid-area: navbar;
+	background: red;
 }
 
 .home-banner {
-    grid-area: homebanner;
+	grid-area: homebanner;
 }
 
 .home-description-wrapper {
-    display: grid;
-    grid-area: homedescription;
-    grid-template-columns: 150px auto 150px;
-    grid-template-areas: ". homedescriptionlogo ." ". yellowaccentline ." ". homedescription ." ". redfrequencyarea .";
+	display: grid;
+	grid-area: homedescription;
+	grid-template-columns: 150px auto 150px;
+	grid-template-areas: 
+	". homedescriptionlogo ."
+	". yellowaccentline ."
+	". homedescription ."
+	". redfrequencyarea .";
 }
 
 .home-description-logo-wrapper {
-    grid-area: homedescriptionlogo;
+	grid-area: homedescriptionlogo;
 }
 
-.yellow-accent-line-center {
-    grid-area: yellowaccentline;
+.yellow-accent-line {
+	grid-area: yellowaccentline;
 }
 
 .home-description {
-    grid-area: homedescription;
+	grid-area: homedescription;
 }
 
 .home-red-frequency-wrapper {
-    grid-area: redfrequencyarea;
+	grid-area: redfrequencyarea;
 }
 
 .home-sub-descriptions-wrapper {
@@ -73,10 +62,17 @@ nav {
 	". left-image home-sub-description-right .";*/
 }
 
+/*.home-sub-description-wrapper {
+  color: #fff;
+  border-radius: 5px;
+  padding: 20px;
+  font-size: 150%;
+}*/
+
 .home-sub-description-left {
 	display: inline-grid;
 	grid-area: homesubdescriptionleft;
-	grid-template-columns: 50% 50%;
+	grid-template-columns: 60% 40%;
 	grid-template-areas: 
 	"homesubdescriptionleftcontent homesubdescriptionrightimage";
 }
@@ -84,14 +80,14 @@ nav {
 .home-sub-description-left2 {
 	display: inline-grid;
 	grid-area: homesubdescriptionleft2;
-	grid-template-columns: 50% 50%;
+	grid-template-columns: 60% 40%;
 	grid-template-areas: 
 	"homesubdescriptionleftcontent homesubdescriptionrightimage";
 }
 
 .home-sub-description-left-content {
 	grid-area: homesubdescriptionleftcontent;
-	width: 500px;
+	width: 550px;
 }
 
 .home-sub-description-right-image {
@@ -102,7 +98,7 @@ nav {
 .home-sub-description-right {
 	display: inline-grid;
 	grid-area: homesubdescriptionright;
-	grid-template-columns: 50% 50%;
+	grid-template-columns: 40% 60%;
 	grid-template-areas: 
 	"homesubdescriptionleftimage homesubdescriptionrightcontent";
 }
@@ -110,7 +106,7 @@ nav {
 .home-sub-description-right2 {
 	display: inline-grid;
 	grid-area: homesubdescriptionright2;
-	grid-template-columns: 50% 50%;
+	grid-template-columns: 40% 60%;
 	grid-template-areas: 
 	"homesubdescriptionleftimage homesubdescriptionrightcontent";
 }
@@ -123,7 +119,7 @@ nav {
 
 .home-sub-description-right-content {
 	grid-area: homesubdescriptionrightcontent;
-	width: 500px;
+	width: 550px;
 }
 
 .right-image {
@@ -131,69 +127,40 @@ nav {
 }
 
 footer {
-    grid-area: footer;
+	grid-area: footer;
 }
 /******************** HOME PAGE END ********************/
 
 /******************** STANDARD PAGE START ********************/
 .standard-page-wrapper {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 100px 550px auto 100px;
-    grid-template-areas: 
-    "navbar" 
-    "standardpagebanner" 
-    "standardpagesidebarcontent" 
-    "footer";
+	display: grid;
+	grid-template-columns: auto;
+	grid-template-rows: 100px 550px auto 100px;
+	grid-template-areas: 
+	"navbar"
+	"standardpagebanner"
+	"standardpagesidebarcontent"
+	"footer";
 }
 
 .standard-page-banner {
-    grid-area: standardpagebanner;
+	grid-area: standardpagebanner;
+	background: orange;
 }
 
 .standard-page-side-bar-content-wrapper {
-    display: inline-grid;
-    grid-area: standardpagesidebarcontent;
-    grid-template-columns: 7.5% 20% 65% 7.5%;
-    grid-template-areas: ". standardpagesidebar standardpagecontent .";
+	display: inline-grid;
+	grid-area: standardpagesidebarcontent;
+	grid-template-columns: 7.5% 20% 65% 7.5%;
+	grid-template-areas: ". standardpagesidebar standardpagecontent .";
 }
 
 .standard-page-side-bar-wrapper {
-    grid-area: standardpagesidebar;
+	grid-area: standardpagesidebar;
 }
 
 .standard-page-content-wrapper {
-    grid-area: standardpagecontent;
+	grid-area: standardpagecontent;
+	background: green;
 }
 /******************** STANDARD PAGE END ********************/
-
-/******************** NOTEBOOK PAGE START ********************/
-.notebook-page-wrapper {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 100px 550px auto 100px;
-    grid-template-areas: "navbar" "standardpagebanner" "notebookpagecontent" "footer";
-}
-
-.notebook-page-content-wrapper {
-    display: inline-grid;
-    grid-area: notebookpagecontent;
-    /*grid-template-columns: 7.5% 85% 7.5%;*/
-}
-
-/******************** NOTEBOOK PAGE END ********************/
-
-/******************** SAFETY PAGE START ********************/
-.safety-page-wrapper {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 100px 550px auto 100px;
-    grid-template-areas: "navbar" "standardpagebanner" "safetypagecontent" "footer";
-}
-
-.safety-page-content-wrapper {
-    display: inline-grid;
-    grid-area: safetypagecontent;
-    /*grid-template-columns: 7.5% 85% 7.5%;*/
-}
-/******************** SAFETY PAGE END ********************/
